[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1"]
[ext_resource type="Theme" path="res://themes/neobrutalist.theme.tres" id="2"]

[node name="Game" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
theme = ExtResource("2")

[node name="Board" type="Control" parent="."]
anchors_preset = 8
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="HUD" type="Control" parent="."]
anchors_preset = 3
anchor_right = 1.0
grow_horizontal = 2
custom_minimum_size = Vector2(0, 80)

[node name="HUDContainer" type="HBoxContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 24

[node name="ScoreLabel" type="Label" parent="HUD/HUDContainer"]
text = "Score: 0"

[node name="BestLabel" type="Label" parent="HUD/HUDContainer"]
text = "Best: 0"

[node name="MovesLabel" type="Label" parent="HUD/HUDContainer"]
text = "Moves: 0"
